[package]
name = "bili_live_open_platfrom_api"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.6.0"
compress = { version = "0.2.1", features = ["zlib"] }
futures-util = "0.3.30"
native-tls = "0.2.12"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["full"] }
tokio-tungstenite = "0.23.1"
tracing = "0.1.40"
